experiments/f7/23d193e2c92ea6903e3debfee32b13354808bc/error
MESSAGE: Execution of "./build_llvm_project.sh" failed

STDOUT:
[1577/2781] Linking CXX static library lib/libLLVMTransformUtils.a
[1578/2781] Linking CXX static library lib/libLLVMFrontendOpenMP.a
[1579/2781] Linking CXX static library lib/libLLVMInstrumentation.a
[1580/2781] Linking CXX static library lib/libLLVMAggressiveInstCombine.a
[1581/2781] Linking CXX static library lib/libLLVMInstCombine.a
[1582/2781] Linking CXX static library lib/libLLVMScalarOpts.a
[1583/2781] Building X86GenInstrInfo.inc...
[1584/2781] Linking CXX static library lib/libLLVMVectorize.a
[1585/2781] Linking CXX static library lib/libLLVMObjCARCOpts.a
[1586/2781] Linking CXX static library lib/libLLVMLinker.a
[1587/2781] Linking CXX static library lib/libLLVMObjectYAML.a
[1588/2781] Linking CXX static library lib/libLLVMipo.a
[1589/2781] Building CXX object tools/clang/lib/CodeGen/CMakeFiles/obj.clangCodeGen.dir/CGBlocks.cpp.o
[1590/2781] Linking CXX static library lib/libLLVMDebugInfoDWARF.a
[1591/2781] Linking CXX static library lib/libLLVMCoroutines.a
[1592/2781] Building CXX object tools/clang/lib/CodeGen/CMakeFiles/obj.clangCodeGen.dir/CGAtomic.cpp.o
[1593/2781] Linking CXX static library lib/libLLVMDebugInfoGSYM.a
[1594/2781] Linking CXX static library lib/libLLVMJITLink.a
[1595/2781] Linking CXX static library lib/libLLVMTarget.a
[1596/2781] Linking CXX static library lib/libLLVMRuntimeDyld.a
[1597/2781] Linking CXX static library lib/libLLVMDebugInfoPDB.a
[1598/2781] Linking CXX static library lib/libLLVMCoverage.a
[1599/2781] Linking CXX static library lib/libLLVMFuzzMutate.a
[1600/2781] Linking CXX static library lib/libLLVMSymbolize.a
[1601/2781] Linking CXX static library lib/libLLVMExecutionEngine.a
[1602/2781] Linking CXX static library lib/libLLVMLibDriver.a
[1603/2781] Linking CXX static library lib/libLLVMDlltoolDriver.a
[1604/2781] Linking CXX static library lib/libLLVMMCJIT.a
[1605/2781] Copying clang's arm64intr.h...
[1606/2781] Copying clang's avx2intrin.h...
[1607/2781] Linking CXX static library lib/libLLVMXRay.a
[1608/2781] Copying clang's adxintrin.h...
[1609/2781] Copying clang's amxintrin.h...
[1610/2781] Copying clang's arm_cmse.h...
[1611/2781] Copying clang's armintr.h...
[1612/2781] Copying clang's arm_acle.h...
[1613/2781] Copying clang's avx512bitalgintrin.h...
[1614/2781] Copying clang's avx512vlbitalgintrin.h...
[1615/2781] Copying clang's avx512cdintrin.h...
[1616/2781] Copying clang's ammintrin.h...
[1617/2781] Copying clang's avx512bf16intrin.h...
[1618/2781] Copying clang's avx512bwintrin.h...
[1619/2781] Copying clang's avx512vpopcntdqintrin.h...
[1620/2781] Copying clang's avx512dqintrin.h...
[1621/2781] Copying clang's avx512erintrin.h...
[1622/2781] Copying clang's avx512fintrin.h...
[1623/2781] Copying clang's avx512ifmaintrin.h...
[1624/2781] Copying clang's avx512ifmavlintrin.h...
[1625/2781] Copying clang's avx512pfintrin.h...
[1626/2781] Copying clang's avx512vbmiintrin.h...
[1627/2781] Copying clang's avx512vbmivlintrin.h...
[1628/2781] Copying clang's avx512vbmi2intrin.h...
[1629/2781] Copying clang's avx512vlvbmi2intrin.h...
[1630/2781] Copying clang's avx512vlbf16intrin.h...
[1631/2781] Copying clang's avx512vlbwintrin.h...
[1632/2781] Copying clang's avx512vlcdintrin.h...
[1633/2781] Copying clang's avx512vlintrin.h...
[1634/2781] Copying clang's avx512vp2intersectintrin.h...
[1635/2781] Copying clang's avx512vldqintrin.h...
[1636/2781] Copying clang's avx512vlvp2intersectintrin.h...
[1637/2781] Copying clang's avx512vpopcntdqvlintrin.h...
[1638/2781] Copying clang's avx512vnniintrin.h...
[1639/2781] Linking CXX static library lib/libLLVMCodeGen.a
[1640/2781] Copying clang's avx512vlvnniintrin.h...
[1641/2781] Copying clang's avxintrin.h...
[1642/2781] Copying clang's bmi2intrin.h...
[1643/2781] Linking CXX static library lib/libLLVMMIRParser.a
[1644/2781] Linking CXX static library lib/libLLVMInterpreter.a
[1645/2781] Copying clang's bmiintrin.h...
[1646/2781] Copying clang's __clang_cuda_builtin_vars.h...
[1647/2781] Linking CXX static library lib/libLLVMAsmPrinter.a
[1648/2781] Copying clang's __clang_cuda_math.h...
[1649/2781] Copying clang's __clang_cuda_cmath.h...
[1650/2781] Linking CXX static library lib/libLLVMSelectionDAG.a
[1651/2781] Copying clang's __clang_cuda_complex_builtins.h...
[1652/2781] Copying clang's __clang_cuda_device_functions.h...
[1653/2781] Linking CXX static library lib/libLLVMDWARFLinker.a
[1654/2781] Copying clang's __clang_cuda_intrinsics.h...
[1655/2781] Copying clang's __clang_cuda_libdevice_declares.h...
[1656/2781] Copying clang's __clang_cuda_math_forward_declares.h...
[1657/2781] Copying clang's __clang_hip_libdevice_declares.h...
[1658/2781] Copying clang's __clang_cuda_runtime_wrapper.h...
[1659/2781] Copying clang's __clang_hip_math.h...
[1660/2781] Linking CXX static library lib/libLLVMGlobalISel.a
[1661/2781] Copying clang's __clang_hip_runtime_wrapper.h...
[1662/2781] Copying clang's cetintrin.h...
[1663/2781] Copying clang's cet.h...
[1664/2781] Copying clang's cldemoteintrin.h...
[1665/2781] Copying clang's clzerointrin.h...
[1666/2781] Copying clang's cpuid.h...
[1667/2781] Copying clang's clflushoptintrin.h...
[1668/2781] Copying clang's clwbintrin.h...
[1669/2781] Copying clang's emmintrin.h...
[1670/2781] Copying clang's enqcmdintrin.h...
[1671/2781] Copying clang's f16cintrin.h...
[1672/2781] Copying clang's float.h...
[1673/2781] Copying clang's fma4intrin.h...
[1674/2781] Copying clang's fmaintrin.h...
[1675/2781] Copying clang's fxsrintrin.h...
[1676/2781] Copying clang's gfniintrin.h...
[1677/2781] Building X86GenSubtargetInfo.inc...
[1678/2781] Copying clang's htmintrin.h...
[1679/2781] Copying clang's htmxlintrin.h...
[1680/2781] Copying clang's immintrin.h...
[1681/2781] Copying clang's ia32intrin.h...
[1682/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86CallLowering.cpp.o
[1683/2781] Building CXX object lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o
FAILED: lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o 
CCACHE_CPP2=yes CCACHE_HASHDIR=yes /usr/bin/ccache /usr/bin/c++  -DGTEST_HAS_RTTI=0 -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -Ilib/Passes -I/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes -Iinclude -I/root/llvm-compile-time-tracker/llvm-project/llvm/include -fPIC -fvisibility-inlines-hidden -Werror=date-time -Wall -Wextra -Wno-unused-parameter -Wwrite-strings -Wcast-qual -Wno-missing-field-initializers -pedantic -Wno-long-long -Wimplicit-fallthrough -Wno-maybe-uninitialized -Wno-class-memaccess -Wno-redundant-move -Wno-noexcept-type -Wdelete-non-virtual-dtor -Wsuggest-override -Wno-comment -fdiagnostics-color -ffunction-sections -fdata-sections -O3 -DNDEBUG    -fno-exceptions -fno-rtti -std=c++14 -MD -MT lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o -MF lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o.d -o lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o -c /root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp: In destructor ‘virtual llvm::IRChangePrinter::~IRChangePrinter()’:
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:341:46: error: no matching function for call to ‘llvm::IRChangePrinter::~IRChangePrinter()’
  341 |   ChangePrinter<std::string>::~ChangePrinter();
      |                                              ^
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:334:29: note: candidate: ‘llvm::ChangePrinter<IRUnitT>::~ChangePrinter() [with IRUnitT = std::__cxx11::basic_string<char>]’
  334 | template <typename IRUnitT> ChangePrinter<IRUnitT>::~ChangePrinter<IRUnitT>() {
      |                             ^~~~~~~~~~~~~~~~~~~~~~
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:334:29: note:   candidate expects 1 argument, 0 provided
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp: At global scope:
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:418:2: warning: extra ‘;’ [-Wpedantic]
  418 | };
      |  ^
[1684/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86CmovConversion.cpp.o
[1685/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86AvoidTrailingCall.cpp.o
[1686/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86CallFrameOptimization.cpp.o
[1687/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86CallingConv.cpp.o
[1688/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86AsmPrinter.cpp.o
ninja: build stopped: subcommand failed.


STDERR:
-- Version: 0.0.0
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX -- failed to compile
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX -- success
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK -- success
Command exited with non-zero status 1
51.51user 5.44system 0:09.85elapsed 578%CPU (0avgtext+0avgdata 412376maxresident)k
0inputs+939592outputs (25major+2334893minor)pagefaults 0swaps
